Use modern java language features